# c_macfsmon

./: .envrc  .gitignore  Makefile  meson.build
fsevents/: fsevents.c  meson.build
fsmatch/: fsmatch.c  fsmatch.h  meson.build
fsmon/: fsmon.c  fsmon.h  meson.build
fsmon-chan/: fsmon-chan.c  fsmon-chan.h  meson.build
fsmon-chan-test/: fsmon-chan-test.c  fsmon-chan-test.h  meson.build
fsmon-test/: fsmon-test.c  meson.build
submodules/: meson.build
