subdir('meson_deps/meson/deps/threads')
subdir('meson_deps/meson/deps/list')
subdir('meson_deps/meson/deps/hsluv-c')
subdir('meson_deps/meson/deps/rgba')
subdir('meson_deps/meson/deps/vt100utils')
subdir('meson_deps/submodules/c_ansi/ansi-codes')
subdir('meson_deps/submodules/c_ansi/ansi-utils')
subdir('meson_deps/submodules/c_ansi/ansi-rgb-utils')
subdir('meson_deps/submodules/c_ansi/term-utils')
subdir('meson_deps/meson/deps/asprintf')
subdir('meson_deps/meson/deps/greatest')
subdir('meson_deps/meson/deps/tiny-regex-c')
subdir('meson_deps/meson/deps/c_stringfn')
subdir('meson_deps/meson/deps/c_string_buffer')
subdir('meson_deps/meson/deps/debug-memory')
subdir('meson_deps/meson/deps/c_fsio')
subdir('meson_deps/meson/deps/dbg')
subdir('meson_deps/meson/deps/chan')
subdir('meson_deps/meson/deps/c_vector')
subdir('meson_deps/meson/deps/timestamp')
subdir('meson_deps/meson/deps/c_eventemitter')
subdir('meson_deps/meson/deps/ms')
subdir('meson_deps/meson/deps/c_timer')
subdir('meson_deps/meson/deps/cargs')
subdir('meson_deps/meson/deps/log.h')
subdir('meson_deps/meson/deps/bytes')
subdir('meson_deps/meson/deps/ctable')
subdir('meson_deps/meson/deps/debug_print_h')
subdir('meson_deps/meson/deps/djbhash')
subdir('meson_deps/meson/deps/c_forever')
subdir('meson_deps/meson/deps/generic_print')
subdir('meson_deps/meson/deps/env.h')
subdir('meson_deps/meson/deps/ee')
subdir('meson_deps/meson/deps/b64')
subdir('meson_deps/meson/deps/dirname')
