subdir('c_deps/meson/deps/threads')
subdir('c_deps/meson/deps/module')
subdir('c_deps/meson/deps/c_vector')
subdir('c_deps/meson/deps/vt100utils')
subdir('c_deps/meson/deps/uuid4')
subdir('c_deps/meson/deps/list')
subdir('c_deps/meson/deps/b64')
subdir('c_deps/meson/deps/c_stringfn')
subdir('c_deps/meson/deps/c_string_buffer')
subdir('c_deps/submodules/c_ansi/ansi-codes')
subdir('c_deps/submodules/c_ansi/ansi-utils')
subdir('c_deps/meson/deps/parson')
subdir('c_deps/meson/deps/hsluv-c')
subdir('c_deps/meson/deps/rgba')
subdir('c_deps/submodules/c_ansi/ansi-rgb-utils')
subdir('c_deps/submodules/c_ansi/term-utils')
subdir('c_deps/meson/deps/asprintf')
subdir('c_deps/meson/deps/c_greatest')
subdir('c_deps/meson/deps/tiny-regex-c')
subdir('c_deps/meson/deps/debug-memory')
subdir('c_deps/meson/deps/c_fsio')
subdir('c_deps/meson/deps/dbg')
subdir('c_deps/meson/deps/chan')
subdir('c_deps/meson/deps/timestamp')
subdir('c_deps/meson/deps/c_eventemitter')
subdir('c_deps/meson/deps/ms')
subdir('c_deps/meson/deps/c_timer')
subdir('c_deps/meson/deps/cargs')
subdir('c_deps/meson/deps/log.h')
subdir('c_deps/meson/deps/bytes')
subdir('c_deps/meson/deps/ctable')
subdir('c_deps/meson/deps/debug_print_h')
subdir('c_deps/meson/deps/djbhash')
subdir('c_deps/meson/deps/c_forever')
subdir('c_deps/meson/deps/generic_print')
subdir('c_deps/meson/deps/env.h')
subdir('c_deps/meson/deps/ee')
subdir('c_deps/meson/deps/dirname')
